--- a/BackboneApp/css/style.css
+++ b/BackboneApp/css/style.css
@@ -24,7 +24,7 @@
 
         li a {
             display: block;
-            color: white;
+            color: #427B44;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
