--- a/BackboneApp/css/style.css
+++ b/BackboneApp/css/style.css
@@ -24,11 +24,16 @@
 
         li a {
             display: block;
-            color: #427B44;
+            color: #D50000;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
         }
+		
+		#cartIcon{
+			width: 20px;
+			height: 20px;
+		}
 
         h1{
             font-weight: 100;
